Underlined the parent div instead to eliminate misalignment issues. Fixed the input to grow to size of bottom border

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -15,37 +15,40 @@
   #sidebar span {
     font-family: DejaVu Sans; }
 
+#search {
+  width: 75%; }
+
 #search-form {
   display: flex;
   justify-content: row;
-  flex-wrap: nowrap; }
-  #search-form input {
-    align-self: flex-end;
-    background: none;
-    font-family: inherit;
-    color: #D7E5E2;
-    font-size: 10pt;
-    border: none;
-    border-radius: 0;
-    border-bottom: 1px solid #63C124;
-    outline: none;
-    vertical-align: top;
-    padding: 5px 0px 3px 5px;
-    margin: 0; }
+  flex-wrap: nowrap;
+  border-bottom: 1px solid #63C124; }
+  #search-form #search-bar {
+    flex: 1; }
+    #search-form #search-bar input {
+      width: 100%;
+      align-self: flex-end;
+      background: none;
+      font-family: inherit;
+      color: #D7E5E2;
+      font-size: 10pt;
+      border: none;
+      border-radius: 0;
+      outline: none;
+      padding: 5px 0px 3px 5px;
+      margin: 0; }
   #search-form #search-button {
     align-self: flex-end;
-    position: relative;
     border: none;
     background-color: inherit;
     padding: 0px 6px 0px 0px;
-    margin: 0 auto;
-    border-bottom: 1px solid #63C124; }
+    margin: 0 auto; }
 
 .icon {
   display: inline;
   width: 1.2em;
   height: 1.2em;
-  padding: 2px 2px 2px 2px;
+  padding: 2px;
   pointer-events: none; }
 
 body {
