--- a/assets/sass/_search.scss
+++ b/assets/sass/_search.scss
@@ -1,38 +1,46 @@
+#search {
+	width: 75%;
+}
+
 #search-form {
 	display: flex;
 	justify-content: row;
 	flex-wrap: nowrap;
+	border-bottom: 1px solid $accent-color;
 
-    input {
-		align-self: flex-end;
-        background: none;
-		font-family: inherit;
-        color: $text-color;
-        font-size: 10pt;
-        border: none;
-        border-radius: 0;
-        border-bottom: 1px solid $accent-color;
-		outline: none;
-		vertical-align: top;
-		padding: 5px 0px 3px 5px;
-		margin: 0;
+	#search-bar {
+		flex: 1;
+
+		input {
+			width: 100%;
+			align-self: flex-end;
+			background: none;
+			font-family: inherit;
+			color: $text-color;
+			font-size: 10pt;
+			border: none;
+			border-radius: 0;
+			outline: none;
+			padding: 5px 0px 3px 5px;
+			margin: 0;
+		}
 	}
 
 	#search-button {
 		align-self: flex-end;
-		position: relative;
 		border: none;
 		background-color: inherit;
 		padding: 0px 6px 0px 0px;
 		margin: 0 auto;
-		border-bottom: 1px solid $accent-color;
 	}
+
 }
 
 .icon {
 	display: inline;
 	width: 1.2em;
 	height: 1.2em;
-	padding: 2px 2px 2px 2px;
+	padding: 2px;
 	pointer-events: none;
 }
+
